[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/UI/StyleBox/SteelRound.tres" type="StyleBox" id=1]
[ext_resource path="res://src/Editor/EditorTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Editor/EditFalse.png" type="Texture2D" id=3]
[ext_resource path="res://assets/Editor/EditTrue.png" type="Texture2D" id=4]
[ext_resource path="res://assets/Editor/VisFalse.png" type="Texture2D" id=5]
[ext_resource path="res://assets/Editor/VisTrue.png" type="Texture2D" id=6]
[ext_resource path="res://src/Editor/Button/LayerButton.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Layer" type="MarginContainer"]
offset_right = 256.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 0, 32 )
mouse_filter = 2
theme = ExtResource( 2 )
theme_override_constants/margin_right = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
offset_left = 8.0
offset_right = 248.0
offset_bottom = 32.0
mouse_filter = 2

[node name="PanelActive" type="Panel" parent="."]
offset_left = 8.0
offset_right = 248.0
offset_bottom = 32.0
mouse_filter = 2
theme_override_styles/panel = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_right = 248.0
offset_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="HBox"]
offset_right = 16.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="LayerButton" type="Button" parent="HBox"]
offset_left = 20.0
offset_right = 204.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 2 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/disabled = SubResource( 4 )
theme_override_styles/normal = SubResource( 5 )
text = "Layer 1"
flat = true
align = 0

[node name="VisButton" type="TextureButton" parent="HBox"]
offset_left = 208.0
offset_top = 12.0
offset_right = 216.0
offset_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="EditButton" type="TextureButton" parent="HBox"]
offset_left = 220.0
offset_top = 12.0
offset_right = 228.0
offset_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )

[node name="Spacer2" type="Control" parent="HBox"]
offset_left = 232.0
offset_right = 240.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 8, 0 )
mouse_filter = 2

[connection signal="pressed" from="HBox/LayerButton" to="." method="_on_LayerButton_pressed"]
[connection signal="toggled" from="HBox/VisButton" to="." method="_on_VisButton_toggled"]
[connection signal="toggled" from="HBox/EditButton" to="." method="_on_EditButton_toggled"]
